[package]
name = "org"
version = "0.1.0"
authors = ["m-cat <scatman@bu.edu>"]
description = "A library for handling org-mode files."
license = "MIT"
repository = "https://github.com/m-cat/org"
readme = "README.md"
keywords = ["org", "org-mode", "mode", "emacs", "file"]
categories = ["text-editors", "text-processing"]
