[package]
authors = ["Marcin S. <scatman@bu.edu>"]
categories = ["text-editors", "text-processing"]
description = "A library for handling org-mode files."
documentation = "https://docs.rs/org"
keywords = ["org", "org-mode", "mode", "emacs", "file"]
license = "MIT"
name = "org"
readme = "README.md"
repository = "https://github.com/m-cat/org"
version = "0.3.0"
